// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout - Space between space-x-0 1`] = `
<View>
  <Text>
    A
  </Text>
  <Text
    style={
      [
        {
          "marginLeft": 0,
        },
      ]
    }
  >
    B
  </Text>
</View>
`;

exports[`Layout - Space between space-x-0.5 1`] = `
<View>
  <Text>
    A
  </Text>
  <Text
    style={
      [
        {
          "marginLeft": 2,
        },
      ]
    }
  >
    B
  </Text>
</View>
`;

exports[`Layout - Space between space-x-1 1`] = `
<View>
  <Text>
    A
  </Text>
  <Text
    style={
      [
        {
          "marginLeft": 4,
        },
      ]
    }
  >
    B
  </Text>
</View>
`;

exports[`Layout - Space between space-x-1.5 1`] = `
<View>
  <Text>
    A
  </Text>
  <Text
    style={
      [
        {
          "marginLeft": 6,
        },
      ]
    }
  >
    B
  </Text>
</View>
`;

exports[`Layout - Space between space-x-96 1`] = `
<View>
  <Text>
    A
  </Text>
  <Text
    style={
      [
        {
          "marginLeft": 384,
        },
      ]
    }
  >
    B
  </Text>
</View>
`;

exports[`Layout - Space between space-x-px 1`] = `
<View>
  <Text>
    A
  </Text>
  <Text
    style={
      [
        {
          "marginLeft": 1,
        },
      ]
    }
  >
    B
  </Text>
</View>
`;

exports[`Layout - Space between space-y-0 1`] = `
<View>
  <Text>
    A
  </Text>
  <Text
    style={
      [
        {
          "marginTop": 0,
        },
      ]
    }
  >
    B
  </Text>
</View>
`;

exports[`Layout - Space between space-y-0.5 1`] = `
<View>
  <Text>
    A
  </Text>
  <Text
    style={
      [
        {
          "marginTop": 2,
        },
      ]
    }
  >
    B
  </Text>
</View>
`;

exports[`Layout - Space between space-y-1 1`] = `
<View>
  <Text>
    A
  </Text>
  <Text
    style={
      [
        {
          "marginTop": 4,
        },
      ]
    }
  >
    B
  </Text>
</View>
`;

exports[`Layout - Space between space-y-1.5 1`] = `
<View>
  <Text>
    A
  </Text>
  <Text
    style={
      [
        {
          "marginTop": 6,
        },
      ]
    }
  >
    B
  </Text>
</View>
`;

exports[`Layout - Space between space-y-96 1`] = `
<View>
  <Text>
    A
  </Text>
  <Text
    style={
      [
        {
          "marginTop": 384,
        },
      ]
    }
  >
    B
  </Text>
</View>
`;

exports[`Layout - Space between space-y-px 1`] = `
<View>
  <Text>
    A
  </Text>
  <Text
    style={
      [
        {
          "marginTop": 1,
        },
      ]
    }
  >
    B
  </Text>
</View>
`;
